hard-gists/8444323/run.log
=== Docker Run Log for 8444323 ===
Started at: Mi 29. Okt 17:48:20 CET 2025

[2025-10-29 17:48:21] START: Running container for 8444323
[2025-10-29 17:48:21] SUCCESS: Container 25ae29cc18ab1f9e70841f8f4a2e8c7df3d9faf2baa7b8499844cb1c2d136e40 started for 8444323
=== Container logs for 8444323 ===
  File "/snippet.py", line 43
    print Str2matrix(data[i:i+16])
    ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
SyntaxError: Missing parentheses in call to 'print'. Did you mean print(...)?
=== End of logs for 8444323 ===
[2025-10-29 17:48:23] INFO: Container 25ae29cc18ab1f9e70841f8f4a2e8c7df3d9faf2baa7b8499844cb1c2d136e40 has stopped
